--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+.answer {
+  background-color: blanchedalmond;
+}
+
+.form {
+  display: block;
+}
+
+.bar {
+  border-left: 2px solid gray;
+  margin: 5px;
+  padding: 5px;
+}
+
+.container {
+  padding-left: 10px;
+  padding-top: 20px;
+}
